--- a/src/index.pug
+++ b/src/index.pug
@@ -5,5 +5,15 @@ html(lang="ru")
   body
     div#root 
 
+    p(class="logo") logo
+    p(class="meme") meme
+
+
+
+    img(src=require('./assets/images/1111.png'), alt="picture")
+    img(src=require('./assets/images/image.png'), alt="picture")
+  
+ 
+
     script(src="bundle.js")
     script(src="index.js")
