--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -1,1 +1,17 @@
 header.header
+	.container
+		.header__row
+			nav.header__menu
+				ul.menu__items
+					li: a(class="menu__item-link" href="#") Для бизнеса
+					li: a(class="menu__item-link" href="#") Магазины
+					li: a(class="menu__item-link" href="#") Помощь
+			.header__services-menu
+				.header-services-menu-item
+					a(class="header-services-menu-link"): span.header-services-menu-icon-wrap
+				.header-servives-menu-item_username
+					a(class="header-services-menu-link-not-auth") Вход и регистрация 
+				a(class="header__button-wrapper" href="#") Разместить объявление
+
+
+				
