--- a/src/views/templates/_template.pug
+++ b/src/views/templates/_template.pug
@@ -3,7 +3,18 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Pug
+    title Avito
     link(rel="stylesheet", href="css/bootstrap-reboot.min.css")
     link(rel="stylesheet", href="css/main.css")
   body
+
+    
+//- doctype html
+//- html
+//-     head
+//-     meta(charset = 'utf-8')
+//-     meta(name = 'viewport', content = 'initial-scale=1, width=device-width')
+//-     title
+//-         block title
+//-     body
+//-         block main
