--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,3 +1,4 @@
+@import './modules/_oneModules.scss';
 @import '_fonts.scss';
 
 
@@ -5,6 +6,7 @@
 	padding: 0px;
 	margin: 0px;
 }
+
 .logo{
 	font-family: "Montserrat";
 	font-style: normal;
@@ -12,4 +14,7 @@
 .meme{
 	font-weight: 400;
 	font-style: normal;
+}
+.container{
+	padding: 0 70px;
 }
