--- a/src/index.pug
+++ b/src/index.pug
@@ -2,8 +2,8 @@ include ./views/templates/_template.pug
 include ./views/components/header.pug
 
 
-//- include ./views/pages/shop.pug
-p#elem 
+include ./views/pages/shop.pug
+
    
 
 script(src="bundle.js")
