--- a/src/views/pages/shop.pug
+++ b/src/views/pages/shop.pug
@@ -1,6 +1,23 @@
 //- include ../templates/_template.pug
 //- include ../components/header.pug
 
+.shop
+  .shop__container
+    .shop__slider
+      h1 slider
+      ul.slider__list
+        li: img(src=require('./../../assets/images/1111.png'), alt="picture", width="200")
+        li: img(src=require('./../../assets/images/1111.png'), alt="picture", width="200")
+        li: img(src=require('./../../assets/images/1111.png'), alt="picture", width="200")
+        li: img(src=require('./../../assets/images/1111.png'), alt="picture", width="200")
+      .slider__arrow-left
+      .slider__arrow-right
+      .slider__arrow-dots
+
+    .shop__content
+      #demo
+
+
 
 
    
